--- a/_css/style.css
+++ b/_css/style.css
@@ -32,3 +32,28 @@ p {
 .foto-legenda figcaption:hover {
   opacity: 1;
 }
+
+/* formatação do menu */
+
+.menu {
+  display: block;
+}
+
+.menu h1 {
+  display: none;
+}
+
+.menu ul {
+  list-style: none;
+  text-transform: uppercase;
+  position: absolute;
+  top: -20px;
+  left: 300px;
+}
+
+.menu li {
+  display: inline-block;
+  background-color: rgb( 221 , 221 , 221 );
+  padding: 10px;
+  margin: 2px;
+}
