--- a/_css/style.css
+++ b/_css/style.css
@@ -48,7 +48,7 @@ p {
   text-transform: uppercase;
   position: absolute;
   top: -20px;
-  left: 300px;
+  right: 100px;
 }
 
 .menu li {
@@ -56,4 +56,18 @@ p {
   background-color: rgb( 221 , 221 , 221 );
   padding: 10px;
   margin: 2px;
+  transition: 1s;
+}
+
+.menu li:hover {
+  background-color: rgb( 96 , 96 , 96 );
+}
+
+.menu a {
+  color: rgb( 0 , 0 , 0 );
+  text-decoration: none;
+}
+
+.menu a:hover {
+  color: rgb( 255 , 255 , 255 );
 }
