--- a/_css/style.css
+++ b/_css/style.css
@@ -1,3 +1,14 @@
+body {
+  background-color: rgb( 221 , 221 , 221 );
+}
+.interface {
+  width: 800px;
+  margin: -20px auto 0 auto;
+  padding: 10px;
+  background-color: rgb( 255 , 255 , 255 );
+  box-shadow: 0 0 10px rgba( 0 , 0 , 0 , 0.4 );
+}
+
 p {
   text-align: justify;
   text-indent: 50px;
