--- a/_css/style.css
+++ b/_css/style.css
@@ -14,6 +14,11 @@ p {
   text-indent: 50px;
 }
 
+.cabecalho .oculos-pequeno {
+  position: absolute;
+  right: 100px;
+  top: 60px;
+}
 /* Formatação de imagens com legendas */
 
 .foto-legenda {
