--- a/_css/style.css
+++ b/_css/style.css
@@ -14,11 +14,35 @@ p {
   text-indent: 50px;
 }
 
+.cabecalho {
+  border-bottom: 1px solid rgb( 96 , 96 , 96 );
+  height: 150px;
+  background: url(../_imagens/glass-logo-peq.jpg) no-repeat 0 80px;
+}
+
+.cabecalho h1 {
+  font-family: Arial, sans-serif;
+  font-size: 30pt;
+  color: rgb( 96 , 96 , 96 );
+  text-shadow: 1px 1px 1px rgba( 0 , 0 , 0 , 0.6 );
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.cabecalho h2 {
+  font-family: Arial, sans-serif;
+  color: rgb( 136 , 136 , 136 );
+  font-size: 15pt;
+  padding: 0;
+  margin-top: 0;
+}
+
 .cabecalho .oculos-pequeno {
   position: absolute;
   right: 100px;
   top: 60px;
 }
+
 /* Formatação de imagens com legendas */
 
 .foto-legenda {
