--- a/_css/style.css
+++ b/_css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+
+@font-face {
+  font-family: 'FonteLogo';
+  src: url(../_fonts/bubblegum-sans-regular.otf);
+}
+
 body {
   background-color: rgb( 221 , 221 , 221 );
 }
@@ -21,7 +28,7 @@ p {
 }
 
 .cabecalho h1 {
-  font-family: Arial, sans-serif;
+  font-family: "FonteLogo", sans-serif;
   font-size: 30pt;
   color: rgb( 96 , 96 , 96 );
   text-shadow: 1px 1px 1px rgba( 0 , 0 , 0 , 0.6 );
@@ -30,7 +37,7 @@ p {
 }
 
 .cabecalho h2 {
-  font-family: Arial, sans-serif;
+  font-family: "Titillium Web", sans-serif;
   color: rgb( 136 , 136 , 136 );
   font-size: 15pt;
   padding: 0;
