--- a/_css/style.css
+++ b/_css/style.css
@@ -119,8 +119,10 @@ p {
 }
 
 .container {
-  width: 500px;
+  width: 520px;
   float: left;
+  border-right: 1px solid rgb( 96 , 96 , 96 );
+  padding-right: 15px;
 }
 
 .lateral {
@@ -129,5 +131,10 @@ p {
 }
 
 .rodape {
+  border-top: 1px solid rgb( 96 , 96 , 96 );
   clear: both;
+}
+
+.rodape p {
+  text-align: center;
 }
