--- a/_css/style.css
+++ b/_css/style.css
@@ -125,6 +125,43 @@ p {
   padding-right: 15px;
 }
 
+table {
+  border-spacing: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table th {
+  color: rgb( 136 , 136 , 136 );
+  font-weight: bolder;
+  font-size: 13pt;
+}
+
+table th span {
+  display: block;
+  float: right;
+  color: rgb( 0 , 0 , 0 );
+  font-size: 8pt;
+  margin-top: 10px;
+}
+
+table td {
+  border: 1px solid rgb( 96 , 96 , 96 );
+  padding: 10px;
+}
+
+table .col-esquerda {
+  color: rgb( 255 , 255 , 255 );
+  background-color: rgb( 96 , 96 , 96 );
+  vertical-align: top;
+  font-weight: bold;
+  text-align: right;
+}
+
+table .col-direita {
+  background-color: rgb( 206 , 206 , 206 );
+}
+
 .lateral {
   width: 350px;
   float: right;
