--- a/_css/style.css
+++ b/_css/style.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: rgb( 221 , 221 , 221 );
+  font-family: Arial, sans-serif;
 }
 .interface {
   width: 1000px;
@@ -19,6 +20,15 @@ body {
 p {
   text-align: justify;
   text-indent: 50px;
+}
+
+a {
+  color: rgb( 96 , 96 , 96 );
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 .cabecalho {
@@ -124,6 +134,37 @@ p {
   border-right: 1px solid rgb( 96 , 96 , 96 );
   padding-right: 15px;
 }
+article h2 {
+  font-size: 13pt;
+  color: rgb( 96 , 96 , 96 );
+  background-color: rgb( 206 , 206 , 206 );
+  padding: 5px 0;
+  padding-right: 5px;
+  margin: 10px 0;
+}
+
+.cabecalho-artigo h1 {
+  font-family: "FonteLogo", sans-serif;
+  font-size: 20pt;
+  color: rgb( 96 , 96 , 96 );
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.cabecalho-artigo h2 {
+  font-size: 13pt;
+  color: rgb( 206 , 206 , 206 );
+  background-color: rgb( 255 , 255 , 255 );
+  margin: 0;
+}
+.cabecalho-artigo h3 {
+  font-size: 12pt;
+  color: rgb( 96 , 96 , 96 );
+}
+
+.cabecalho-artigo .alinha-direita {
+  text-align: right;
+}
 
 table {
   border-spacing: 0px;
@@ -165,6 +206,24 @@ table .col-direita {
 .lateral {
   width: 350px;
   float: right;
+  background-color: rgb( 221 , 221 , 221 );
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 2px 2px 2px rgba( 0 , 0 , 0 , 0.4 );
+}
+
+.lateral h1 {
+  font-family: "FonteLogo", sans-serif;
+  font-size: 20pt;
+  color: rgb( 96 , 96 , 96 );
+  margin-top: 0;
+}
+
+.lateral h2 {
+  background-color: rgb( 96 , 96 , 96 );
+  font-size: 13pt;
+  color: rgb( 255 , 255 , 255 );
+  padding: 5px;
 }
 
 .rodape {
