--- a/_css/fotos.css
+++ b/_css/fotos.css
@@ -18,28 +18,92 @@
 
 .photo-album li span {
   opacity: 0;
+  color: rgb(255 , 255 , 255);
+  text-shadow: 1px 1px 1px rgb(0 , 0 , 0);
+  background-color: rgba(0 , 0 , 0 , 0.3);
+  font-size: 9pt;
+  line-height: 370px;
+  padding: 5px;
+  transition: 0.4s;
+}
+
+.photo-album li:hover {
+  transform: scale(1.5);
+  transition: all 0.5s ease-in;
+}
+
+.photo-album li:hover span {
+  opacity: 1;
 }
 
 .photo01 {
   background: url('../_imagens/galeria-01.jpg') no-repeat;
+  background-position: 50% 50%;
+  background-size: 400px 400px;
+  background-color: rgb(255 , 255 , 255);
+}
+
+.photo01:hover {
+  background-position: 0 0;
+  background-size: 200px 200px;
 }
 
 .photo02 {
   background: url('../_imagens/galeria-02.jpg') no-repeat;
+  background-position: 50% 50%;
+  background-size: 400px 400px;
+  background-color: rgb(255 , 255 , 255);
+}
+
+.photo02:hover {
+  background-position: 0 0;
+  background-size: 200px 200px;
 }
 
 .photo03 {
   background: url('../_imagens/galeria-03.jpg') no-repeat;
+  background-position: 50% 50%;
+  background-size: 400px 400px;
+  background-color: rgb(255 , 255 , 255);
+}
+
+.photo03:hover {
+  background-position: 0 0;
+  background-size: 200px 200px;
 }
 
 .photo04 {
   background: url('../_imagens/galeria-04.jpg') no-repeat;
+  background-position: 50% 50%;
+  background-size: 400px 400px;
+  background-color: rgb(255 , 255 , 255);
+}
+
+.photo04:hover {
+  background-position: 0 0;
+  background-size: 200px 200px;
 }
 
 .photo05 {
   background: url('../_imagens/galeria-05.jpg') no-repeat;
+  background-position: 50% 50%;
+  background-size: 400px 400px;
+  background-color: rgb(255 , 255 , 255);
+}
+
+.photo05:hover {
+  background-position: 0 0;
+  background-size: 200px 200px;
 }
 
 .photo06 {
   background: url('../_imagens/galeria-06.jpg') no-repeat;
+  background-position: 50% 50%;
+  background-size: 400px 400px;
+  background-color: rgb(255 , 255 , 255);
+}
+
+.photo06:hover {
+  background-position: 0 0;
+  background-size: 200px 200px;
 }
