--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,7 @@
   width: 900px;
   height: 580px;
   margin: auto;
-  background: url("../_imagens/radio-tv.png") no-repeat;
+  background: url("/../_imagens/radio-tv.png") no-repeat;
 }
 
 .music {
