--- a/css/fotos.css
+++ b/css/fotos.css
@@ -85,7 +85,7 @@
 }
 
 .photo05 {
-  background: url('/../_imagens/galeria-05.jpg') no-repeat;
+  background: url('../_imagens/galeria-05.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
@@ -97,7 +97,7 @@
 }
 
 .photo06 {
-  background: url('/../_imagens/galeria-06.jpg') no-repeat;
+  background: url('../_imagens/galeria-06.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
