--- a/css/fotos.css
+++ b/css/fotos.css
@@ -37,7 +37,7 @@
 }
 
 .photo01 {
-  background: url('./../_imagens/galeria-01.jpg') no-repeat;
+  background: url('./../imagens/galeria-01.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
@@ -49,7 +49,7 @@
 }
 
 .photo02 {
-  background: url('./../_imagens/galeria-02.jpg') no-repeat;
+  background: url('./../imagens/galeria-02.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
@@ -61,7 +61,7 @@
 }
 
 .photo03 {
-  background: url('/../_imagens/galeria-03.jpg') no-repeat;
+  background: url('/../imagens/galeria-03.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
@@ -73,7 +73,7 @@
 }
 
 .photo04 {
-  background: url('./../_imagens/galeria-04.jpg') no-repeat;
+  background: url('./../imagens/galeria-04.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
@@ -85,7 +85,7 @@
 }
 
 .photo05 {
-  background: url('./../_imagens/galeria-05.jpg') no-repeat;
+  background: url('./../imagens/galeria-05.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
@@ -97,7 +97,7 @@
 }
 
 .photo06 {
-  background: url('./../_imagens/galeria-06.jpg') no-repeat;
+  background: url('./../imagens/galeria-06.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
