--- a/css/fotos.css
+++ b/css/fotos.css
@@ -61,7 +61,7 @@
 }
 
 .photo03 {
-  background: url('/../imagens/galeria-03.jpg') no-repeat;
+  background: url('./../imagens/galeria-03.jpg') no-repeat;
   background-position: 50% 50%;
   background-size: 400px 400px;
   background-color: rgb(255 , 255 , 255);
